resources/onyx-screen.css
/* ... */
/* BANNER */
#onyx-banner {
	position: fixed;
	z-index: 1000;
	top: 0;
	left: 0;
	width: 100%;
	height: 55px;
	margin: 0;
	padding: 0;
	background-color: #222;
}

#onyx-banner-content {
	display: flex;
	justify-content: space-between;
}

#onyx-banner-bannerLogo {
	padding: 5px 15px;
	height: 45px;
	float: left;
	display: flex;
	align-items: center;
	justify-items: center;
}

#onyx-bannerLogo-image {
	width: auto;
	height: auto;
	max-height: 45px;
	max-width: 350px;
}

#onyx-banner-search {
	width: 100%;
	display: flex;
}

#onyx-search-form {
	width: 100%;
	display: flex;
}

#searchInput {
	width: 100%;
	font-size: 20px;
	border: none;
	border-bottom: 2px solid rgba(255, 255, 255, 0.5);
	background:	transparent;
	color: white;
	padding: 0 5px;
	margin: 10px 0;
	transition: 0.4s;
}

#searchInput:focus {
	border-bottom: 2px solid white;
	transition: 0.4s;
}

.onyx-search-button {
	height: 45px;
	min-width: 45px;
	margin: 5px 0 5px 15px;
}

#onyx-banner-userOptions {
	display: flex;
	float: right;
	padding: 0 15px;
}

#onyx-notifications-list {
	min-width: 300px;
}

#onyx-messages-list {
	min-width: 300px;
}

#onyx-userButton-avatar {
	margin-right: 15px;
}

#onyx-userButton-avatar > img {
	width: 30px;
	height: 30px;
}

#onyx-userButton-label {
	display: inline-block;
	height: 25px;
	font-size: 20px;
	color: #fff;
	margin: 5px 0;
	padding: 5px 0;
	cursor: default;
	/* Disable selection of username text */
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

/* PAGE */
#onyx-page {
	margin: 85px auto 30px auto;
	background-color: #ddd;
}

/* HEADER */
#onyx-header-wikiHeader {
	height: 165px;
	position: relative;
	background-color: #ccc;
}

#onyx-wikiHeader-headerLogo {
	float: left;
	padding: 15px;
	height: 135px;
	display: flex;
	align-items: center;
}

#onyx-headerLogo-image {
	width: auto;
	height: auto;
	max-width: 400px;
	max-height: 135px;
}

#onyx-wikiHeader-tagline {
	margin: 0 15px;
}

#onyx-wikiHeader-navigation {
	overflow: hidden;
	bottom: 0;
	right: 0;
	position: absolute;
	margin: 15px;

	/* HACK: Prevents navigation from overlapping with header logo, but in future
					 it should be replaced so that the width of the navigation is dynamic
					 with respect to the logo width and page width. */
	max-width: 1040px;
}

#onyx-navigation-list {
	list-style: none;
	margin: 0;
	display: flex;
	flex-wrap: wrap-reverse;
	direction: rtl;
	justify-content: space-between;
}

#onyx-navigation-list > li {
	display: inline;
	margin: 5px 10px;
	color: #333;
}

#onyx-navigation-list > li > a {
	color: #333;
	font-weight: bold;
}

#onyx-header-articleHeader {
	width: 100%;
	min-height: 80px;
}

#onyx-articleHeader-actions {
	float: right;
	padding-right: 15px;
}

#onyx-actions-actionsList {
	display: inline-block;
	margin: 15px 0 15px 2px;
	padding: 0;
}

#onyx-actionsList-button {
	min-width: 28px;
	cursor: auto;
	margin: 0;
}

#onyx-actionsList-dropdownIcon {
	margin: 7px;
	fill: #fff;
	height: 14px;
}

#onyx-actionsList-list {
	margin: 0;
}

#onyx-articleHeader-title {
	min-height: 44px;
	margin: 0 15px 15px 15px;
	vertical-align: bottom;
}

#onyx-articleHeader-subtitle {
	margin: 0 0 15px 15px;
	font-style: italic;
}

#onyx-articleHeader-undelete {
	margin: 0 0 15px 15px;
	font-style: italic;
}

/* SIDEBAR */
#onyx-pageBody-sidebar {
	padding: 0;
}

#onyx-pageBody-sidebar h1 {
	font-size: 26px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h2 {
	font-size: 24px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h3 {
	font-size: 22px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h4 {
	font-size: 20px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h5 {
	font-size: 18px;
	margin-top: 0;
	padding-top: 0;
}

#onyx-pageBody-sidebar h6 {
	font-size: 16px;
	margin-top: 0;
	padding-top: 0;
}

.onyx-sidebarModule {
	padding: 0 0 15px 0;
}

#onyx-recentChanges-heading {
	text-transform: capitalize;
}

#onyx-pageContents-heading {
	text-transform: capitalize;
}

#onyx-recentChanges-content > ul {
	list-style: none;
	margin: 0 0 0 15px;
}

#onyx-recentChanges-content > ul > li {
	margin: 0 0 5px 0;
}

.onyx-recentChanges-info {
	font-size: 10pt;
	color: #333;
}

.onyx-recentChanges-info a {
	color: #333;
}

#onyx-sidebar-stickyModules {
	position: sticky;
	top: 65px;
}

#onyx-pageContents-list {
	list-style: none;
	margin: 0 0 0 25px; 
}

#onyx-pageContents-itemPrefix {
	margin: 0 10px 0 0;
	color: #444;
}

/* ARTICLE CONTENT */
#onyx-pageBody-content {
	overflow: hidden;
	padding: 0 0 15px 0;
}

#onyx-content-siteNotice {
	margin: 0 15px 15px 15px;
	padding: 15px 15px 15px 15px;
	background-color: #a2a9b1;
	min-height: 36px;
}

#onyx-siteNotice-closeButton {
	float: right;
}

#localNotice {
	margin-bottom: 11px;
}

/* FOOTER */
#onyx-footer {
	width: 100%;
	margin: 0;
	background-color: #777;
}

#onyx-footer-footerContent {
	padding-top: 15px;
	padding-bottom: 40px;
}

#onyx-footerContent-footerLinks {
	padding-left:15px;
}

.onyx-footerLinks-list {
	list-style: none;
	font-size: 10pt;
	color: #222;
	margin: 0;
	padding: 0;
}

.onyx-footerLinks-divider {
	display: none;
}

#onyx-footerLinks-info {
	margin: 0;
	padding: 0;
}

#onyx-footerLinks-info > li {
	margin: 0 0 10px 0;
}

#onyx-footerLinks-places > li {
	display: inline;
	padding: 0 0px 5px 0;
}

#onyx-footerLinks-places > li:not(:first-child):before {
	content: ' | ';
}

#onyx-footerIcons-list {
	list-style: none;
	direction: rtl;
}

/* TOOLBOX */
#onyx-toolbox {
	position: fixed;
	z-index: 1000;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 19px;
	padding: 3px;
	background-color: #222;
}

#onyx-toolbox-tools {
	margin: 0 auto;
	padding: 0;
	text-align: center;
	font-size: 10pt;
}

#onyx-tools-list {
	list-style: none;
	margin: 0;
	padding: 0;
}

#onyx-tools-list > li {
	display: inline;
	color: #fff;
}

#onyx-tools-list > li > a {
	color: #fff;
}

#onyx-tools-list li a {
	color: #fff;
}
/* ... */

